Improve restaurant layout for takeaway

--- a/restaurant.html
+++ b/restaurant.html
@@ -191,10 +191,10 @@
                   </div>
                 </div>
 
-                <div class="menu-actions">
+                <!--<div class="menu-actions">
                   <a href="#takeawayinfo" class="under-btn">Mais informações</a>
                   <a href="tel:+351239440207" class="button light">Encomendar</a>
-                </div>
+                </div>-->
               </div>
 
               <div class="col-lg-6 offset-lg-1 sided-plate-col">
@@ -205,6 +205,21 @@
                     <img class="plate-img" id="rot-plate" src="assets/images/restaurant-plate-lg.png">
                   </div>
                 </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="takeaway-section">
+          <div class="row takeaway-wrapper">
+            <div class="col-sm-12 col-lg-5 col-xl-4">
+              <h3 class="takeaway-title">Takeaway</h3>
+              <a href="tel:+351239440207" class="button light">Encomendar</a>
+            </div>
+            <div class="col-sm-10 col-lg-6 offset-lg-1">
+              <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
+              <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
+              <h5 class="mb-30">Entregas numa distância de 5km.</h5>
+              <h5 class="mb-30">Ligue para o 239 440 207 para fazer a sua encomenda.</h5>
             </div>
           </div>
         </section>
@@ -281,21 +296,6 @@
             <div class="swiper-pagination light-pagination"></div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
-          </div>
-        </section>
-
-        <section class="takeaway-section">
-          <div class="row takeaway-wrapper">
-            <div class="col-sm-12 col-lg-5 col-xl-4">
-              <h3 class="takeaway-title">Takeaway</h3>
-              <a href="tel:+351239440207" class="button light">Encomendar</a>
-            </div>
-            <div class="col-sm-10 col-lg-6 offset-lg-1">
-              <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
-              <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
-              <h5 class="mb-30">Entregas numa distância de 5km.</h5>
-              <h5 class="mb-30">Ligue para o 239 440 207 para fazer a sua encomenda.</h5>
-            </div>
           </div>
         </section>
 
