add quantities to packs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!------ LITTLE COOKIE BAR ----->
 
-      <div class="cookie-banner">
+      <div class="cookie-banner" style="display: none;">
         <small>Utilizamos cookies próprias e de terceiros para melhorar a sua experiência e os nossos serviços.
            Se continuar a navegar, está a concordar com os Termos e Condições e Política de Cookies do site.</small>
         <button class="close-cookie">
