--- a/shop.html
+++ b/shop.html
@@ -525,6 +525,44 @@
 										</div>
 									</div>
 								</a>
+
+								<div class="pack-quantity-wrapper">
+									<div class="pack-quantity">
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+										<div class="d-flex justify-content-between">
+											<small>Pilsener</small>
+											<small>2 x 330ml</small>
+										</div>
+									</div>
+								</div>
+
 								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
