--- a/shop.html
+++ b/shop.html
@@ -139,15 +139,20 @@
 				
 				<div class="modal-footer">
 					<div class="modal-footer-total">
-						<div class="total-description">
-							<span class="subtotal-text">Subtotal</span>
-							<span class="ship-text">Envio</span>
-							<h4 class="total-text">Total</h4>
-						</div>
-						<div class="total-values">
-							<span class="subtotal-value">5.00€</span>
-							<span class="ship-value">1.00€</span>
-							<h4 class="total-value">6.00€</h4>
+						<div>
+							<div class="d-flex">
+								<div class="total-description">
+									<!--<span class="subtotal-text">Subtotal</span>
+									<span class="ship-text">Envio</span>-->
+									<h4 class="total-text">Subtotal:</h4>
+								</div>
+								<div class="total-values">
+									<!--<span class="subtotal-value">5.00€</span>
+									<span class="ship-value">1.00€</span>-->
+									<h4 class="total-value">6.00€</h4>
+								</div>
+							</div>
+							<h6 class="min-buy-amount o-30 mt-10">*Compra mínima de 10€</h6>
 						</div>
 					</div>
 					<button class="button dark">Finalizar compra</button>
