--- a/brewery.html
+++ b/brewery.html
@@ -127,7 +127,7 @@
             <div class="present-title-col col-sm-6 col-lg-7 offset-lg-2">
               <h3 class="present-title">Malte<br>Água de coimbra<br>Lúpulo...<br>É Cerveja Praxis</h3>
             </div>
-            <div class="present-beer col-md-7 col-lg-3">
+            <div class="present-beer col-10 col-md-7 col-lg-3">
               <img class="present-beer-img" src="assets/images/beer-process-present.png">
             </div>
           </div>
