--- a/index.html
+++ b/index.html
@@ -122,21 +122,20 @@
               <li><a href="shop.html" class="menu-link">Loja Online</a></li>
             </ul>
             <div class="media-links-container-vertical d-flex">
-              <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
+              <a href="https://www.facebook.com/cervejaPraxis" target="_blank" class="media-link facebook">
                 <img src="assets/images/facebook-logo.svg">
               </a>
-              <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
+              <a href="https://www.instagram.com/praxisbeer/" target="_blank" class="media-link instagram">
                 <img src="assets/images/instagram-logo.svg">
               </a>
-              <!-- Youtube Link Missing -->
-              <a href="" class="media-link youtube">
-                <img src="assets/images/youtube-logo.svg">
-              </a>
-              <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
+              <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" target="_blank" class="media-link tripadvisor">
                 <img src="assets/images/tripadvisor-logo.svg">
               </a>
-              <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
+              <a href="https://untappd.com/w/praxis/34853/" target="_blank" class="media-link untappd">
                 <img src="assets/images/untappd-logo.svg">
+              </a>
+              <a href="https://www.ratebeer.com/brewer/13539/sort/2/" target="_blank" class="media-link ratebeer">
+                <img src="assets/images/ratebeer-logo.svg">
               </a>
             </div>
           </div>
@@ -148,7 +147,13 @@
           <img class="bg-image" src="assets/images/pure-malt-lg.jpg" alt="Paxis Teaser">
 
           <div class="w-50 align-self-end">
-            <h2 class="invert">Pure <br>Malt Beer</h2>
+            <h2 class="invert">Fino <br>É de coimbra</h2>
+          </div>
+
+          <div class="beer-ratings-wrapper justify-content-between">
+            <a href="https://untappd.com/w/praxis/34853/" target="_blank"><img src="assets/images/untappd-logo.svg" alt="Untappd"></a>
+            
+            <a href="https://www.ratebeer.com/brewer/13539/sort/2/" target="_blank"><img src="assets/images/ratebeer-logo.svg" alt="Ratebeer"></a>
           </div>
         </section>
 
@@ -357,7 +362,7 @@
               <h5 class="section-description invert">
                 This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
                 Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
-              <!--<a href="shop.html" class="button light disabled">Brevemente</a>-->
+              <a href="shop.html" class="button light">Visitar</a>
             </div>
           </div>
         </section>
@@ -374,10 +379,6 @@
                 </a>
                 <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
                   <img src="assets/images/instagram-logo.svg">
-                </a>
-                <!-- Youtube Link Missing -->
-                <a href="" class="media-link youtube">
-                  <img src="assets/images/youtube-logo.svg">
                 </a>
                 <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
                   <img src="assets/images/tripadvisor-logo.svg">
