add phone number

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             </a>
           </div>
 
+          <a class="phonenumber-menu" href="tel:+351239440207">
+            <h5>239 440 207</h5>
+          </a>
+
           <a class="shopping-menu" href="#">
             <img class="shopping-cart-icon" src="assets/images/shopping-cart-icon.svg">
           </a>
