add logo to footer

--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
             <div class="col-6 col-lg-2 sitemap">
               <a href="shop.html" class="footer-link disabled"><h6>Loja</h6></a>
               <a href="community.html" class="footer-link"><h6>Comunidade</h6></a>
-              <a href="contacts.html" class="footer-link"><h6>Contactos</h6></a>
-              <a href="community" class="footer-link"><h6>Eventos</h6></a>
+              <a href="contacts.html" class="footer-link"><h6>Restaurante</h6></a>
+              <a href="community" class="footer-link"><h6>Fábrica Praxis</h6></a>
             </div>
             <div class="col-6 col-lg-3 policies">
               <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
@@ -415,7 +415,7 @@
           <div class="row rights-wrapper">
             <div class="col-12 rights-container d-flex justify-content-between">
               <small class="mb-20">® 2020 Praxis. Todos os direitos reservados</small>
-              <small class="mb-20">Made by <a class="madeby" href="https://famazing.pt/">F*Amazing</a></small>
+              <small class="mb-20">Made by <a class="madeby" href="https://famazing.pt/"><img src="assets/images/famazing-footer.png"></a></small>
             </div>
           </div>
         </footer>
