--- a/index.html
+++ b/index.html
@@ -404,13 +404,21 @@
               <a href="privacy-policy.html" class="footer-link"><small>Política de Privacidade</small></a>
               <a href="complaint-book" class="footer-link"><small>Livro de reclamações</small></a>
             </div>
-            <div class="col-sm-12 col-lg-4 newsletter">
+
+            <div class="col-sm-12 col-lg-4 newsletter policies">
+              <p class="mb-10">Urbanização Quinta da Várzea,<br> Lote 29, Santa Clara.</p>
+              <a href="mailto:coimbra@praxis.pt" class="footer-link"><p>coimbra@praxis.pt</p></a>
+              <a href="tel:+351239440207" class="footer-link"><p>+351 239 440 207</p></a>
+            </div>
+
+
+            <!--<div class="col-sm-12 col-lg-4 newsletter">
               <label>Fica a par das novidades</label>
               <div class="d-flex newsletter-field-container">
                 <input type="email" placeholder="Insere o teu email..." class="field-input light">
                 <button class="button light">Subscrever</button>
               </div>
-            </div>
+            </div>-->
           </div>
           <div class="row rights-wrapper">
             <div class="col-12 rights-container d-flex justify-content-between">
