add ratebeer to footer and navbar

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           </div>
 
           <a class="phonenumber-menu" href="tel:+351911922162">
+            <img src="assets/images/telephone.svg">
             <h5>911 922 162</h5>
           </a>
 
@@ -378,17 +379,21 @@
                 <img src="assets/images/praxis-logo.svg">
               </div>
               <div class="media-links-container-horizontal d-flex">
-                <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
+                <a href="https://www.facebook.com/cervejaPraxis" target="_blank" class="media-link facebook">
                   <img src="assets/images/facebook-logo.svg">
                 </a>
-                <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
+                <a href="https://www.instagram.com/praxisbeer/" target="_blank" class="media-link instagram">
                   <img src="assets/images/instagram-logo.svg">
                 </a>
-                <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
+                <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" target="_blank" class="media-link tripadvisor">
                   <img src="assets/images/tripadvisor-logo.svg">
                 </a>
-                <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
+                <a href="https://untappd.com/w/praxis/34853/" target="_blank" class="media-link untappd">
                   <img src="assets/images/untappd-logo.svg">
+                </a>
+
+                <a href="https://www.ratebeer.com/brewer/13539/sort/2/" target="_blank" class="media-link ratebeer">
+                  <img src="assets/images/ratebeer-logo.svg">
                 </a>
               </div>
             </div>
