Small color fixes

--- a/shop.html
+++ b/shop.html
@@ -363,7 +363,7 @@
 							</article>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
-							<article class="product-container product-belgian-dark">
+							<article class="product-container product-belgiandark">
 								<a href="" class="product-link">
 									<div class="product-content">
 										<h4 class="product-name">Belgian Dark</h4>
@@ -390,7 +390,7 @@
 							</article>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
-							<article class="product-container product-pumpkin-ale">
+							<article class="product-container product-pumpkinale">
 								<a href="" class="product-link">
 									<div class="product-content">
 										<h4 class="product-name">Pumpkin Ale</h4>
@@ -414,7 +414,7 @@
 							</article>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
-							<article class="product-container product-portuguese-pedro">
+							<article class="product-container product-portuguesepedro">
 								<a href="" class="product-link">
 									<div class="product-content">
 										<h4 class="product-name">Portuguese Pedro</h4>
@@ -489,7 +489,7 @@
 							</article>
 						</div>
 						<div class="col-12 col-sm-6 col-lg-4 col-xl-3">
-							<article class="product-container product-dunkel-strong">
+							<article class="product-container product-dunkelstrong">
 								<a href="" class="product-link">
 									<div class="product-content">
 										<h4 class="product-name">Dunkel Strong</h4>
