--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="article:publisher" content="https://www.facebook.com/cervejaPraxis"/>
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -218,7 +218,7 @@
                   <h3 class="title">Weiss</h3>
                 </a>
               </article>
-              <article class="swiper-slide belgian-dark-item">
+              <article class="swiper-slide belgiandark-item">
                 <a href="beers/belgian-dark.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -228,7 +228,7 @@
                   <h3 class="title">Belgian Dark</h3>
                 </a>
               </article>
-              <article class="swiper-slide portuguese-pedro-item">
+              <article class="swiper-slide portuguesepedro-item">
                 <a href="beers/portuguese-pedro.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -248,7 +248,7 @@
                   <h3 class="title">IPA</h3>
                 </a>
               </article>
-              <article class="swiper-slide pumpkin-ale-item">
+              <article class="swiper-slide pumpkinale-item">
                 <a href="beers/pumpkin-ale.html" class="cover">
                   <div class="picture">
                     <span class="label obj-label-left">Descobrir</span>
@@ -278,7 +278,7 @@
                   <h3 class="title">B.S.D.A</h3>
                 </a>
               </article>
-              <article class="swiper-slide dunkel-strong-item">
+              <article class="swiper-slide dunkelstrong-item">
                 <a href="beers/dunkel-strong.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -434,7 +434,7 @@
         </footer>
       </main>
 
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/news-scroll.js"></script>
