WIP: Caxopo page

--- a/museum.html
+++ b/museum.html
@@ -81,6 +81,7 @@
                   <li><a href="" class="submenu-link">B.S.D.A</a></li>
                 </ul>
               </li>
+              <li><a href="caxopo.html" class="menu-link">Caxopo</a></li>
               <li><a href="museum.html" class="menu-link">Museu</a></li>
               <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
               <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
