--- a/restaurant.html
+++ b/restaurant.html
@@ -81,11 +81,12 @@
                 <li><a href="" class="submenu-link">B.S.D.A</a></li>
               </ul>
             </li>
+            <li><a href="caxopo.html" class="menu-link">Caxopo</a></li>
             <li><a href="museum.html" class="menu-link">Museu</a></li>
             <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
             <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
             <li><a href="community.html" class="menu-link">Comunidade</a></li>
-            <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
+            <li><a href="shop.html" class="menu-link">Loja Online</a></li>
             </ul>
             <div class="media-links-container-vertical d-flex">
             <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
