--- a/caxopo.html
+++ b/caxopo.html
@@ -110,17 +110,24 @@
         </div>
       </header>
 
-      <main>
+      <main class="main-cax">
+        <section class="fullscreen-wrapper caxopo-preset-section dark-section">
+          <img class="bg-texture" src="assets/images/caxopo/caxopo-bg-zero.png">
+          <div class="caxopo-content-wrapper">
+            <img class="presentation-ig" src="assets/images/caxopo/iguanaWht.svg">
+            <img class="presentation-logo" src="assets/images/caxopo/caxopo-logo.svg">
+          </div>
+        </section>
+
         <section class="fullscreen-wrapper dark-section d-flex">
           <video class="bg-video" loop="" muted="" autoplay="" playsinline="" src="./assets/images/brewery-teaser.mp4"></video>
         </section>
 
         <section class="fullscreen-wrapper caxopo-section dark-section">
           <img class="bg-texture" src="assets/images/caxopo/caxopo-bg-one.png">
-          <div class="restaurant-content-wrapper">
+          <div class="caxopo-content-wrapper">
             <div class="row">
               <div class="col-xs-12 col-lg-6 compound-image-wrapper">
-                <div class="parallax-window thin-image" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo-1.jpg"></div>
                 <div class="parallax-window ratio-image section-one" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo.png"></div>
               </div>
               <div class="col-xs-12 col-lg-6 caxopo-narrative-wrapper">
@@ -150,7 +157,7 @@
           </div>
         </section>
 
-        <section class="fullscreen-wrapper caxopo-section dark-section">
+        <section class="fullscreen-wrapper caxopo-section origins-section dark-section">
           <img class="bg-texture" src="assets/images/caxopo/caxopo-bg-three.png">
           <div class="caxopo-content-wrapper">
             <div class="row">
@@ -167,7 +174,10 @@
           </div>
         </section>
 
-        
+        <section class="dark-section">
+          <img class="last-banner" src="assets/images/caxopo/presentation-caxopo-4.jpg">
+        </section>
+
         </main>
 
 
