--- a/caxopo.html
+++ b/caxopo.html
@@ -131,9 +131,8 @@
                 <div class="parallax-window ratio-image section-one" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo.png"></div>
               </div>
               <div class="col-xs-12 col-lg-6 caxopo-narrative-wrapper">
-                <h5 class="caxopo-narrative-subtitle">Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Consectetur adipiscing elit duis tristique sollicitud nibh sit amet commodo. </h5>
-                    <p class="caxopo-narrative-info">Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. Quis vel eros donec ac odio. Sed cras ornare arcu dui. Cursus turpis massa tincidunt dui ut. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Aenean sed adipiscing diam donec adipiscing tristique risus. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. 
-                    Pulvinar elementum integer enim neque volutpat ac. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Id leo in vitae turpis massa sed. Facilisi etiam dignissim diam quis enim lobortis. Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. </p>
+                <h3 class="caxopo-narrative-subtitle">A Praxis, agora, é para todos!<br></h3>
+                <h3 class="caxopo-narrative-subtitle">Atreve-te.</h3>
               </div>
             </div>
           </div>
@@ -144,10 +143,8 @@
           <div class="caxopo-content-wrapper">
             <div class="row">
               <div class="col-xs-12 col-lg-6 caxopo-narrative-wrapper">
-                <h3 class="mb-60 caxopo-narrative-title">O que é <br>Caxôpo?</h3>
-                <h5 class="caxopo-narrative-subtitle">Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. </h5>
-                    <p class="caxopo-narrative-info">Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. Quis vel eros donec ac odio. Sed cras ornare arcu dui. Cursus turpis massa tincidunt dui ut. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Aenean sed adipiscing diam donec adipiscing tristique risus. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. 
-                    Pulvinar elementum integer enim neque volutpat ac. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Id leo in vitae turpis massa sed. Facilisi etiam dignissim diam quis enim lobortis. Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. </p>
+                <h3 class="mb-60 caxopo-narrative-title">O que é <br>a Caxôpo?</h3>
+                <h5 class="caxopo-narrative-subtitle">O Caxôpo é uma bebida não fermentada, logo não alcoólica, concebida a partir de cereal maltado de elevada qualidade. É caracterizada por um conjunto de propriedades organoléticas e nutricionais ímpares, que lhe conferem classe, singularidade e a definem como produto natural, nutritivo e para todos.</h5>
               </div>
               <div class="col-xs-12 col-lg-5 compound-image-wrapper">
                 <div class="parallax-window ratio-image section-two" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo-2.jpg"></div>
@@ -161,14 +158,12 @@
           <img class="bg-texture" src="assets/images/caxopo/caxopo-bg-three.png">
           <div class="caxopo-content-wrapper">
             <div class="row">
-              <div class="col-xs-12 col-lg-5 compound-image-wrapper">
-                <div class="parallax-window ratio-image" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo-3.jpg"></div>
+              <div class="col-xs-12 col-lg-6 compound-image-wrapper">
+                <div class="parallax-window ratio-image section-one" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/caxopo/presentation-caxopo-3.jpg"></div>
               </div>
               <div class="col-xs-12 col-lg-6 caxopo-narrative-wrapper">
-                <h3 class="mb-60 caxopo-narrative-title">Origens</h3>
-                <h5 class="caxopo-narrative-subtitle">Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. </h5>
-                    <p class="caxopo-narrative-info">Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. Quis vel eros donec ac odio. Sed cras ornare arcu dui. Cursus turpis massa tincidunt dui ut. Dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Aenean sed adipiscing diam donec adipiscing tristique risus. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus a. 
-                    Pulvinar elementum integer enim neque volutpat ac. Nulla malesuada pellentesque elit eget gravida cum sociis natoque. Id leo in vitae turpis massa sed. Facilisi etiam dignissim diam quis enim lobortis. Ut tortor pretium viverra suspendisse. Sed libero enim sed faucibus. </p>
+                <h3 class="mb-60 caxopo-narrative-title">A Essência</h3>
+                <h5 class="caxopo-narrative-subtitle">Pioneira a nível nacional, a bebida Caxôpo caracteriza-se pela sua irreverência e mistério, sendo fiel às suas origens selvagens e exóticas da região das Caraíbas, onde este estilo de bebida é muito apreciado. Bebida diferenciada, direcionada para um público jovem e com a legítima aspiração de alcançar de forma transversal todos aqueles que apreciem a experiência de novos produtos.</h5>
               </div>
             </div>
           </div>
