Fix images weight

--- a/caxopo.html
+++ b/caxopo.html
@@ -143,7 +143,7 @@
           <div class="caxopo-content-wrapper">
             <div class="row">
               <div class="col-xs-12 col-lg-6 caxopo-narrative-wrapper">
-                <h3 class="mb-60 caxopo-narrative-title">O que é <br>a Caxôpo?</h3>
+                <h3 class="mb-60 caxopo-narrative-title">O que é <br>o Caxôpo?</h3>
                 <h5 class="caxopo-narrative-subtitle">O Caxôpo é uma bebida não fermentada, logo não alcoólica, concebida a partir de cereal maltado de elevada qualidade. É caracterizada por um conjunto de propriedades organoléticas e nutricionais ímpares, que lhe conferem classe, singularidade e a definem como produto natural, nutritivo e para todos.</h5>
               </div>
               <div class="col-xs-12 col-lg-5 compound-image-wrapper">
