Added missing icons

--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -135,8 +135,26 @@
                   <p>
                     <img src="../assets/images/wheat-vector.svg">
                     Cevada Maltada</p>
-                  <p><img src="../assets/images/hop-vector.svg">
+                  <p>
+                    <img src="../assets/images/hop-vector.svg">
                   Lúpulo e Leveduras</p>
+
+                  <!-- MISSING ICONS in other beers -->
+                  <p>
+                    <img src="../assets/images/oat-vector.svg">
+                  Aveia</p>
+                  <p>
+                    <img src="../assets/images/spices-vector.svg">
+                  Especiarias</p>
+                  <p>
+                    <img src="../assets/images/pumpkin-vector.svg">
+                  Abóbora</p>
+                  <p>
+                    <img src="../assets/images/herbs-vector.svg">
+                  Ervas aromáticas</p>
+                  <p>
+                    <img src="../assets/images/barley-vector.svg">
+                  Trigo Maltado</p>
                 </div>
 
                 <!--<div class="form-group">
